feat: friends and leaderboards
